# cookiecutter-aiohttp

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  MANIFEST.in  Makefile  docker-entrypoint.sh  setup.cfg  setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  abc.py  app.py  container.py  daemon.py  database.py  provider.py  repository.py  service.py  util.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/http/: action.py  app.py  middleware.py  package.json  view_helper.py  web.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/http/asset/js/src/: main.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/http/view/layout/: default.j2  error.j2  header.j2  json.j2
