[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__

[options]
python_requires = >=3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
   aiohttp-basicauth-middleware
   aiohttp-debugtoolbar
   aiohttp-devtools
   aiohttp-jinja2
   aiohttp-session
   aiohttp >=3.8, <=3.9
   aiosqlite
   cryptography
   dependency-injector
   pysqlite3-binary

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.__main__:main

[options.package_data]
{{ cookiecutter.project_slug }} = VERSION
{{ cookiecutter.project_slug }}.config = *
{{ cookiecutter.project_slug }}.http.asset = *
{{ cookiecutter.project_slug }}.http.node_modules = *
{{ cookiecutter.project_slug }}.http.view = *
